# resume-builder

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN_VARIANTS.md  README.md  generate_resume.py  pyproject.toml  resume_data.example.json  resume_template.html  resume_template_classic.html  resume_template_minimalist.html  resume_template_modern.html
.github/workflows/: ci.yml
src/: __init__.py  generate_resume.py  parse_linkedin.py
templates/: resume_template_classic.html  resume_template_minimalist.html  resume_template_modern.html
tests/: conftest.py  test_generate_resume.py  test_parse_linkedin.py
