[project]
name = "resume-builder"
version = "0.1.0"
description = "Resume rendering script"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.0",
    "pypdf>=6.6.0",
    "weasyprint>=67.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[project.scripts]
generate-resume = "generate_resume:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["generate_resume.py"]

[tool.hatch.build.targets.sdist]
only-include = [
    "generate_resume.py",
    "resume_template*.html",
    "resume_data.example.json",
    "pyproject.toml",
    "README.md",
    "CLAUDE.md",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["generate_resume"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=.",
    "--cov-branch",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
